--- a/index.html
+++ b/index.html
@@ -15,11 +15,19 @@
 
 <body>
     <header>
-        ヘッダー
+        <ul class="header__nav mycontents-wide">
+            <li class="header__nav__list"><a href="">Lilabとは</a></li>
+            <li class="header__nav__list"><a href="">特徴</a></li>
+            <li class="header__nav__list"><a href="">案件事例</a></li>
+            <li class="header__nav__list"><a href="">ご利用の流れ</a></li>
+            <li class="header__nav__list header__nav__list__last-btn"><a href="">応募する</a></li>
+        </ul>
     </header>
 
     <main>
-        メイン
+        <section class="hero">
+            <p><img src="" alt=""></p>
+        </section>
     </main>
 
     <footer>
