--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="サイトキーワードを,で区切って入力">
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <!--<script src="sample.js"></script>-->
@@ -25,8 +26,20 @@
     </header>
 
     <main>
-        <section class="hero">
-            <p><img src="" alt=""></p>
+        <section class="hero mycontents">
+            <div class="hero__left">
+                 <p class="hero__left__logo"><img src="img/icon/logo.svg" alt=""></p>
+            <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム</h1>
+            <ul class="hero__left__feature">
+                <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
+                <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
+                <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
+            </ul>
+            <a class="hero__left__btn" href="">事前登録に応募する</a>
+            </div>
+            <div class="hero__right">
+                <img class="hero__right__img" src="img/icon/hero-pc.png" alt="">
+            </div>
         </section>
     </main>
 
