--- a/index.html
+++ b/index.html
@@ -28,17 +28,36 @@
     <main>
         <section class="hero mycontents">
             <div class="hero__left">
-                 <p class="hero__left__logo"><img src="img/icon/logo.svg" alt=""></p>
-            <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム</h1>
-            <ul class="hero__left__feature">
-                <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
-                <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
-                <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
-            </ul>
-            <a class="hero__left__btn" href="">事前登録に応募する</a>
+                <p class="hero__left__logo"><img src="img/icon/logo.svg" alt=""></p>
+                <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム
+                </h1>
+                <ul class="hero__left__feature">
+                    <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
+                    <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
+                    <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
+                </ul>
+                <a class="hero__left__btn" href="">事前登録に応募する</a>
             </div>
             <div class="hero__right">
                 <img class="hero__right__img" src="img/icon/hero-pc.png" alt="">
+            </div>
+        </section>
+
+        <section class="about mycontents">
+            <h2 class="about__title"><span>Li.Lab</span> でフリーランスに最適な環境を</h2>
+            <div class="about__contents">
+                <img class="about__contents__left" src="img/sample/about-sample.png" alt="">
+                <div class="about__contents__right">
+                    <h3 class="about__contents__right__title">
+                        スキルはあるのに<br>
+                        活躍の場がない<br>
+                        そんなフリーランスへ</h3>
+                    <p class="about__contents__right__text">
+                        LiLabは完全審査制のプラットフォームです。<br>
+                        スキルがあるのに活躍の場に恵まれない<br>
+                        フリーランスの案件獲得をサポートします。
+                    </p>
+                </div>
             </div>
         </section>
     </main>
