--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <section class="hero mycontents">
             <div class="hero__left">
                 <p class="hero__left__logo"><img src="img/icon/logo.svg" alt=""></p>
-                <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム
-                </h1>
+                <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム</h1>
                 <ul class="hero__left__feature">
                     <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
                     <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
@@ -60,6 +59,20 @@
                 </div>
             </div>
         </section>
+
+        <section class="what">
+            <div class="what__contents mycontents">
+                <h2 class="sec-title sec-title_what"><img src="img/icon/logo.svg" alt="">とは？</h2>
+                <div class="what__contents__contents">
+                    <img class="what__contents__contents__left" src="img/icon/hero-pc.png" alt="">
+                    <div class="what__contents__contents__right">
+                        <h3 class="what__contents__contents__right__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム</h3>
+                        <p class="what__contents__contents__right__text">LiLabは完全審査制のフリーランス人材プラットフォームです。ハイクラスフリーランス人材の営業や不得意分野を補い、得意分野で最大限のパフォーマンスを発揮する手助けをさせていだきます。</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
