--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <section class="hero mycontents">
             <div class="hero__left">
                 <p class="hero__left__logo"><img src="img/icon/logo.svg" alt=""></p>
-                <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム</h1>
+                <h1 class="hero__left__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム
+                </h1>
                 <ul class="hero__left__feature">
                     <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
                     <li class="hero__left__feature__list">テキスト<br>テキストテキスト<br>テキスト</li>
@@ -66,13 +67,52 @@
                 <div class="what__contents__contents">
                     <img class="what__contents__contents__left" src="img/icon/hero-pc.png" alt="">
                     <div class="what__contents__contents__right">
-                        <h3 class="what__contents__contents__right__title"><span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム</h3>
-                        <p class="what__contents__contents__right__text">LiLabは完全審査制のフリーランス人材プラットフォームです。ハイクラスフリーランス人材の営業や不得意分野を補い、得意分野で最大限のパフォーマンスを発揮する手助けをさせていだきます。</p>
+                        <h3 class="what__contents__contents__right__title">
+                            <span>上位1%</span>の<span>ハイクラス</span>限定！<br><span>フリーランス</span>プラットフォーム
+                        </h3>
+                        <p class="what__contents__contents__right__text">
+                            LiLabは完全審査制のフリーランス人材プラットフォームです。ハイクラスフリーランス人材の営業や不得意分野を補い、得意分野で最大限のパフォーマンスを発揮する手助けをさせていだきます。
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
 
+        <section class="feature mycontents">
+            <h2 class="sec-title sec-title_feature"><span class="sec-title__accent">Li.Lab</span>とは？</h2>
+            <ul class="feature__contents">
+                <li class="feature__contents__list">
+                    <span class="feature__contents__list__bg_first"></span>
+                    <img class="feature__contents__list__img" src="img/sample/about-sample.png" alt="">
+                    <div class="feature__contents__list__texts">
+                        <h3 class="feature__contents__list__texts__title">完全審査制</h3>
+                        <p class="feature__contents__list__texts__text">
+                            完全審査制で運用を行っております。ポートフォリオ審査とオンライン面談の審査を突破した高いスキルをもった人材のみ登録ができることから、高単価の案件が集まりやすい仕組みとなっております。<br>
+                            自分の得意領域を企業に適切にアピールできるよう、スコアリング機能をご用意しております。<br>
+                            それによりスキルのミスマッチを防いでいます。</p>
+                    </div>
+                </li>
+                <li class="feature__contents__list feature__contents__list_reverse">
+                    <img class="feature__contents__list__img" src="img/sample/about-sample.png" alt="">
+                    <div class="feature__contents__list__texts">
+                        <h3 class="feature__contents__list__texts__title">高単価/リモート案件を毎月安定して紹介</h3>
+                        <p class="feature__contents__list__texts__text">最低時給3000円以上の案件しか取り扱いを行っておりません。<br>
+                            スキルに見合った報酬を適切に受け取るための仕組みを整えております。</p>
+                    </div>
+                </li>
+                <li class="feature__contents__list feature__contents__list_last">
+                    <span class="feature__contents__list__bg_last"></span>
+                    <img class="feature__contents__list__img" src="img/sample/about-sample.png" alt="">
+                    <div class="feature__contents__list__texts">
+                        <h3 class="feature__contents__list__texts__title">企業と直接契約の報酬が受け取れる</h3>
+                        <p class="feature__contents__list__texts__text">Lilabの料金形態は企業ユーザーお支払いのサブスクリプションモデルです。<br>
+                            そのため仲介マージンが発生せず、契約金額全額お給料として受け取ることができます。<br>
+                            フリーランスユーザーの審査、登録、利用は全て無料です。</p>
+                    </div>
+                </li>
+            </ul>
+            <a class="wide-btn" href="">無料で<span>Li.Lab</span>をはじめる</a>
+        </section>
     </main>
 
     <footer>
