微調整　いろいろ

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </section>
 
         <section class="feature mycontents">
-            <h2 class="sec-title sec-title_feature"><span class="sec-title__accent">Li.Lab</span>とは？</h2>
+            <h2 class="sec-title sec-title_feature"><span class="sec-title__accent">Li.Lab </span>の特徴</h2>
             <ul class="feature__contents">
                 <li class="feature__contents__list">
                     <span class="feature__contents__list__bg_first"></span>
