--- a/index.html
+++ b/index.html
@@ -113,6 +113,134 @@
             </ul>
             <a class="wide-btn" href="">無料で<span>Li.Lab</span>をはじめる</a>
         </section>
+
+        <section class="gallery mycontents">
+            <h2 class="sec-title sec-title_gallery">幅広い企業が登録しています</h2>
+            <span class="gallery__spacer"></span>
+            <ul class="gallery__contents">
+                <li class="gallery__contents__list">
+                    <h4 class="gallery__contents__list__subtitle">Pythonエンジニア</h4>
+                    <h3 class="gallery__contents__list__title">Saas事業開発責任者として活躍できるPythonエンジニア募集！</h3>
+                    <img class="gallery__contents__list__bookmark" src="img/icon/bookmark.svg" alt="">
+                    <div class="gallery__contents__list__about">
+                        <div class="gallery__contents__list__about__left">
+                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg" alt="">
+                            <div class="gallery__contents__list__about__left__foot">
+                                <img class="gallery__contents__list__about__left__foot__icon" src="img/sample/gallery-company-logo.png" alt="">
+                                <p class="gallery__contents__list__about__left__foot__name">株式会社whitecanvas</p>
+                                <p class="gallery__contents__list__about__left__foot__locate">東京都</p>
+                            </div>
+                        </div>
+                        <div class="gallery__contents__list__about__right">
+                            <ul class="gallery__contents__list__about__right__list">
+                                <li><span>年収</span>600万～800万</li>
+                                <li><span>勤務日数</span>週5日・ 8h/1日</li>
+                                <li><span>経験年数</span>3年～</li>
+                            </ul>
+                            <p class="gallery__contents__list__about__right__skill">スキル<span>Python</span></p>
+                            <ul class="gallery__contents__list__about__right__tag-list">
+                                <li>リモートOK</li>
+                                <li>休日稼働可能</li>
+                                <li>副業OK</li>
+                            </ul>
+                            <p class="gallery__contents__list__about__right__text">
+                                【必須スキル・経験】<br>
+                                ・チームでの開発経験がある    ・pythonでの開発経験 
+                            </p>
+                            <p class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
+                                【歓迎するスキル・経験】<br>
+                                ・MySQLクエリのパフォーマンス改善の経験<br>
+                                ・RedisなどのKVSを用いた開発経験<br>
+                                ・PHP等のフレームワークのメジャーバージョンアップ経験
+                            </p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="gallery__contents__list">
+                    <h4 class="gallery__contents__list__subtitle">Pythonエンジニア</h4>
+                    <h3 class="gallery__contents__list__title">Saas事業開発責任者として活躍できるPythonエンジニア募集！</h3>
+                    <img class="gallery__contents__list__bookmark" src="img/icon/bookmark.svg" alt="">
+                    <div class="gallery__contents__list__about">
+                        <div class="gallery__contents__list__about__left">
+                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg" alt="">
+                            <div class="gallery__contents__list__about__left__foot">
+                                <img class="gallery__contents__list__about__left__foot__icon" src="img/sample/gallery-company-logo.png" alt="">
+                                <p class="gallery__contents__list__about__left__foot__name">株式会社whitecanvas</p>
+                                <p class="gallery__contents__list__about__left__foot__locate">東京都</p>
+                            </div>
+                        </div>
+                        <div class="gallery__contents__list__about__right">
+                            <ul class="gallery__contents__list__about__right__list">
+                                <li><span>年収</span>600万～800万</li>
+                                <li><span>勤務日数</span>週5日・ 8h/1日</li>
+                                <li><span>経験年数</span>3年～</li>
+                            </ul>
+                            <p class="gallery__contents__list__about__right__skill">スキル<span>Python</span></p>
+                            <ul class="gallery__contents__list__about__right__tag-list">
+                                <li>リモートOK</li>
+                                <li>休日稼働可能</li>
+                                <li>副業OK</li>
+                            </ul>
+                            <p class="gallery__contents__list__about__right__text">
+                                【必須スキル・経験】<br>
+                                ・チームでの開発経験がある    ・pythonでの開発経験 
+                            </p>
+                            <p class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
+                                【歓迎するスキル・経験】<br>
+                                ・MySQLクエリのパフォーマンス改善の経験<br>
+                                ・RedisなどのKVSを用いた開発経験<br>
+                                ・PHP等のフレームワークのメジャーバージョンアップ経験
+                            </p>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="gallery__contents__list">
+                    <h4 class="gallery__contents__list__subtitle">Pythonエンジニア</h4>
+                    <h3 class="gallery__contents__list__title">Saas事業開発責任者として活躍できるPythonエンジニア募集！</h3>
+                    <img class="gallery__contents__list__bookmark" src="img/icon/bookmark.svg" alt="">
+                    <div class="gallery__contents__list__about">
+                        <div class="gallery__contents__list__about__left">
+                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg" alt="">
+                            <div class="gallery__contents__list__about__left__foot">
+                                <img class="gallery__contents__list__about__left__foot__icon" src="img/sample/gallery-company-logo.png" alt="">
+                                <p class="gallery__contents__list__about__left__foot__name">株式会社whitecanvas</p>
+                                <p class="gallery__contents__list__about__left__foot__locate">東京都</p>
+                            </div>
+                        </div>
+                        <div class="gallery__contents__list__about__right">
+                            <ul class="gallery__contents__list__about__right__list">
+                                <li><span>年収</span>600万～800万</li>
+                                <li><span>勤務日数</span>週5日・ 8h/1日</li>
+                                <li><span>経験年数</span>3年～</li>
+                            </ul>
+                            <p class="gallery__contents__list__about__right__skill">スキル<span>Python</span></p>
+                            <ul class="gallery__contents__list__about__right__tag-list">
+                                <li>リモートOK</li>
+                                <li>休日稼働可能</li>
+                                <li>副業OK</li>
+                            </ul>
+                            <p class="gallery__contents__list__about__right__text">
+                                【必須スキル・経験】<br>
+                                ・チームでの開発経験がある    ・pythonでの開発経験 
+                            </p>
+                            <p class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
+                                【歓迎するスキル・経験】<br>
+                                ・MySQLクエリのパフォーマンス改善の経験<br>
+                                ・RedisなどのKVSを用いた開発経験<br>
+                                ・PHP等のフレームワークのメジャーバージョンアップ経験
+                            </p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <div class="gallery__btns">
+                <button class="gallery__btns__btn gallery__btns__btn__prev">PREV</button>
+                <span class="gallery__btns__hr"></span>
+                <button class="gallery__btns__btn gallery__btns__btn__next">NEXT</button>
+            </div>
+        </section>
     </main>
 
     <footer>
