--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
                     <img class="gallery__contents__list__bookmark" src="img/icon/bookmark.svg" alt="">
                     <div class="gallery__contents__list__about">
                         <div class="gallery__contents__list__about__left">
-                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg" alt="">
+                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg"
+                                alt="">
                             <div class="gallery__contents__list__about__left__foot">
-                                <img class="gallery__contents__list__about__left__foot__icon" src="img/sample/gallery-company-logo.png" alt="">
+                                <img class="gallery__contents__list__about__left__foot__icon"
+                                    src="img/sample/gallery-company-logo.png" alt="">
                                 <p class="gallery__contents__list__about__left__foot__name">株式会社whitecanvas</p>
                                 <p class="gallery__contents__list__about__left__foot__locate">東京都</p>
                             </div>
@@ -145,9 +147,10 @@
                             </ul>
                             <p class="gallery__contents__list__about__right__text">
                                 【必須スキル・経験】<br>
-                                ・チームでの開発経験がある    ・pythonでの開発経験 
+                                ・チームでの開発経験がある ・pythonでの開発経験
                             </p>
-                            <p class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
+                            <p
+                                class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
                                 【歓迎するスキル・経験】<br>
                                 ・MySQLクエリのパフォーマンス改善の経験<br>
                                 ・RedisなどのKVSを用いた開発経験<br>
@@ -163,9 +166,11 @@
                     <img class="gallery__contents__list__bookmark" src="img/icon/bookmark.svg" alt="">
                     <div class="gallery__contents__list__about">
                         <div class="gallery__contents__list__about__left">
-                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg" alt="">
+                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg"
+                                alt="">
                             <div class="gallery__contents__list__about__left__foot">
-                                <img class="gallery__contents__list__about__left__foot__icon" src="img/sample/gallery-company-logo.png" alt="">
+                                <img class="gallery__contents__list__about__left__foot__icon"
+                                    src="img/sample/gallery-company-logo.png" alt="">
                                 <p class="gallery__contents__list__about__left__foot__name">株式会社whitecanvas</p>
                                 <p class="gallery__contents__list__about__left__foot__locate">東京都</p>
                             </div>
@@ -184,9 +189,10 @@
                             </ul>
                             <p class="gallery__contents__list__about__right__text">
                                 【必須スキル・経験】<br>
-                                ・チームでの開発経験がある    ・pythonでの開発経験 
+                                ・チームでの開発経験がある ・pythonでの開発経験
                             </p>
-                            <p class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
+                            <p
+                                class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
                                 【歓迎するスキル・経験】<br>
                                 ・MySQLクエリのパフォーマンス改善の経験<br>
                                 ・RedisなどのKVSを用いた開発経験<br>
@@ -202,9 +208,11 @@
                     <img class="gallery__contents__list__bookmark" src="img/icon/bookmark.svg" alt="">
                     <div class="gallery__contents__list__about">
                         <div class="gallery__contents__list__about__left">
-                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg" alt="">
+                            <img class="gallery__contents__list__about__left__img" src="img/sample/gallery-sample.jpg"
+                                alt="">
                             <div class="gallery__contents__list__about__left__foot">
-                                <img class="gallery__contents__list__about__left__foot__icon" src="img/sample/gallery-company-logo.png" alt="">
+                                <img class="gallery__contents__list__about__left__foot__icon"
+                                    src="img/sample/gallery-company-logo.png" alt="">
                                 <p class="gallery__contents__list__about__left__foot__name">株式会社whitecanvas</p>
                                 <p class="gallery__contents__list__about__left__foot__locate">東京都</p>
                             </div>
@@ -223,9 +231,10 @@
                             </ul>
                             <p class="gallery__contents__list__about__right__text">
                                 【必須スキル・経験】<br>
-                                ・チームでの開発経験がある    ・pythonでの開発経験 
+                                ・チームでの開発経験がある ・pythonでの開発経験
                             </p>
-                            <p class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
+                            <p
+                                class="gallery__contents__list__about__right__text gallery__contents__list__about__right__text_last">
                                 【歓迎するスキル・経験】<br>
                                 ・MySQLクエリのパフォーマンス改善の経験<br>
                                 ・RedisなどのKVSを用いた開発経験<br>
@@ -240,6 +249,20 @@
                 <span class="gallery__btns__hr"></span>
                 <button class="gallery__btns__btn gallery__btns__btn__next">NEXT</button>
             </div>
+        </section>
+
+        <section class="how">
+            <div class="how__contents">
+                <h2 class="sec-title"><!--微ズレ-->
+                    <span class="sec-title__accent sec-title__accent_black">How to use</span>
+                    <span class="sec-title__subtitle">Li.Labの使い方</span>
+                </h2>
+                <p>全体見てから書きます</p>
+            </div>
+        </section>
+
+        <section>
+            
         </section>
     </main>
 
