--- a/index.html
+++ b/index.html
@@ -261,8 +261,63 @@
             </div>
         </section>
 
-        <section>
-            
+        <section class="faq mycontents">
+            <h2 class="sec-title sec-title_faq"><!--微ズレ-->
+                <span class="sec-title__accent sec-title__accent_black">FAQ</span>
+                <span class="sec-title__subtitle">よくあるご質問</span>
+            </h2>
+
+            <ul class="faq__contetns">
+                <li class="faq__contetns__list faq__contetns__list_active">
+                    <p class="faq__contetns__list__text">掲載されている求人について詳しく聞くことはできますか？</p>
+                    <button class="faq__contetns__list__btn faq__contetns__list__btn_active">
+                        <span class="faq__contetns__list__btn__plus_1"></span>
+                        <span class="faq__contetns__list__btn__plus_2"></span>
+                        Answer
+                    </button>
+                </li>
+                <li class="faq__contetns__list">
+                    <p class="faq__contetns__list__text">掲載されている求人について詳しく聞くことはできますか？</p>
+                    <button class="faq__contetns__list__btn">
+                        <span class="faq__contetns__list__btn__plus_1"></span>
+                        <span class="faq__contetns__list__btn__plus_2"></span>
+                        Answer
+                    </button>
+                </li>
+                <li class="faq__contetns__list">
+                    <p class="faq__contetns__list__text">掲載されている求人について詳しく聞くことはできますか？</p>
+                    <button class="faq__contetns__list__btn">
+                        <span class="faq__contetns__list__btn__plus_1"></span>
+                        <span class="faq__contetns__list__btn__plus_2"></span>
+                        Answer
+                    </button>
+                </li>
+                <li class="faq__contetns__list">
+                    <p class="faq__contetns__list__text">掲載されている求人について詳しく聞くことはできますか？</p>
+                    <button class="faq__contetns__list__btn">
+                        <span class="faq__contetns__list__btn__plus_1"></span>
+                        <span class="faq__contetns__list__btn__plus_2"></span>
+                        Answer
+                    </button>
+                </li>
+                <li class="faq__contetns__list">
+                    <p class="faq__contetns__list__text">掲載されている求人について詳しく聞くことはできますか？</p>
+                    <button class="faq__contetns__list__btn">
+                        <span class="faq__contetns__list__btn__plus_1"></span>
+                        <span class="faq__contetns__list__btn__plus_2"></span>
+                        Answer
+                    </button>
+                </li>
+                <li class="faq__contetns__list">
+                    <p class="faq__contetns__list__text">掲載されている求人について詳しく聞くことはできますか？</p>
+                    <button class="faq__contetns__list__btn">
+                        <span class="faq__contetns__list__btn__plus_1"></span>
+                        <span class="faq__contetns__list__btn__plus_2"></span>
+                        Answer
+                    </button>
+                </li>
+            </ul>
+            <a class="wide-btn" href="">その他の質問を見る</a>
         </section>
     </main>
 
