--- a/index.html
+++ b/index.html
@@ -319,6 +319,12 @@
             </ul>
             <a class="wide-btn" href="">その他の質問を見る</a>
         </section>
+
+        <section class="info">
+            <p class="info__text">テキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキスト</p>
+            <a class="info__btn__base" href="">○○をはじめる</a>
+            <a class="info__btn__white" href="">企業の方はこちら</a>
+        </section>
     </main>
 
     <footer>
