--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
 
         <section class="how">
             <div class="how__contents">
-                <h2 class="sec-title"><!--微ズレ-->
+                <h2 class="sec-title">
+                    <!--微ズレ-->
                     <span class="sec-title__accent sec-title__accent_black">How to use</span>
                     <span class="sec-title__subtitle">Li.Labの使い方</span>
                 </h2>
@@ -262,7 +263,8 @@
         </section>
 
         <section class="faq mycontents">
-            <h2 class="sec-title sec-title_faq"><!--微ズレ-->
+            <h2 class="sec-title sec-title_faq">
+                <!--微ズレ-->
                 <span class="sec-title__accent sec-title__accent_black">FAQ</span>
                 <span class="sec-title__subtitle">よくあるご質問</span>
             </h2>
@@ -327,7 +329,27 @@
         </section>
     </main>
 
-    <footer>
-        フッター
+    <footer class="footer-pc">
+        <div class="mycontents">
+            <div class="footer-pc__menu">
+                <p class="footer-pc__menu__title"><span>Li.Lab </span>について</p>
+                <p class="footer-pc__menu__list">
+                    <a href="">ユーザーの方</a>　｜　<a href="">企業の方</a>
+                </p>
+            </div>
+            <div class="footer-pc__menu footer-pc__menu_last">
+                <p class="footer-pc__menu__title"><span>MENU</span></p>
+                <p class="footer-pc__menu__list">
+                    <a href="">会社概要</a>　｜　<a href="">利用規約</a>　｜　<a href="">プライバシーポリシー</a>　｜　<a href="">よくあるご質問</a>　｜　<a href="">お問い合わせ</a>　｜　<a href="">Li.Lab Media</a>
+                </p>
+            </div>
+            <img class="footer-sp__logo" src="img/icon/logo-white.svg" alt="">
+            <p class="footer-sp__sns">
+                <a href="" class="footer-sp__sns__img_first"><img src="img/icon/fb-white.svg" alt=""></a>
+                <a href=""><img src="img/icon/Twitter-white.svg" alt=""></a>
+            </p>
+            <p class="footer-pc__copy">©whitecanvas, Inc</p>
+        </div>
+
     </footer>
 </body>
